# pi_news_aggregator

./: .dockerignore  .env.example  .envrc  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: arm64-smoke.yml  k3d-e2e.yml  k3d-multinode-e2e.yml  secret-scan.yml  test.yml
deploy/flux/: README.md  apps.yaml  policies.yaml  secrets-sync.yaml
deploy/policies/: README.md  namespaces.yaml  nats-accounts.conf  netpol-zone-data.yaml  netpol-zone-ingest.yaml  netpol-zone-present.yaml  netpol-zone-process.yaml  rbac.yaml
deploy/secrets/: README.md  kustomization.yaml
docs/: 0b-bootstrap-runbook.md  local-news-design.md  pi-throughput-findings.md
libs/bus/: __init__.py  client.py  config.py
libs/classify/: __init__.py  classifier.py  featurize.py  model_store.py  onnx_classifier.py
libs/dedup/: __init__.py  dedup.py  simhash.py
libs/embed/: __init__.py  embedder.py  onnx_embedder.py
libs/gazetteer/: __init__.py  matcher.py
libs/llm/: __init__.py  client.py
libs/ner/: __init__.py  ner.py  onnx_ner.py
libs/schema/: __init__.py  claim.py  enriched.py  item.py  retrain_role.sh  story.py  tally.py
libs/tokenize/: __init__.py  wordpiece.py
libs/trust/: __init__.py  edges.py  graph.py  states.py  (+1 more)
scripts/: dev-env.sh  fetch-models.sh  validate-nats-perms.sh  validate_nats_perms.py
tests/: test_api.py  test_bluesky.py  test_claimx.py  test_classify.py  test_cluster.py  test_dedup.py  test_deploy_sync.py  test_enriched.py  test_explore.py  test_featurize.py  test_filter.py  test_gazetteer.py  test_gdacs.py  test_gdelt.py  test_inauth.py  test_llm_client.py  test_mastodon.py  test_ner.py  test_noaa.py  test_notify.py  test_onnx_embedder.py  test_onnx_ner.py  test_press.py  test_retrain.py  test_score.py  test_split.py  test_state.py  test_tally.py  test_trust.py  test_trust_match.py  test_wikipedia.py  test_wire.py  test_wordpiece.py
(+93 files in other folders)
